#Issued Solved Letters are getting out of box in about us #486

--- a/src/styles/aboutus.css
+++ b/src/styles/aboutus.css
@@ -19,16 +19,19 @@
 .about-us-block {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .about-us-community, .about-us-product, .about-us-event, .about-us-location {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    width: 35%;
-    height: 15rem;
+    width: calc(50% - 1rem);
+    padding: 1rem;
     border: 1px solid rgba(206, 212, 218, 1);
     border-radius: 8px;
+    box-sizing: border-box;
     margin-bottom: 21px;
 }
 
@@ -96,7 +99,7 @@
 
     .about-us-community, .about-us-event, .about-us-location, .about-us-product {
         width: 90%;
-        height: 100%;
+        height: auto;
         padding: 0.5rem;
     }
 }
@@ -110,7 +113,7 @@
 
     .about-us-community, .about-us-event, .about-us-location, .about-us-product {
         width: 90% !important;
-        height: 100%;
+        height: auto;
         padding: 1rem;
     }
 }
@@ -118,7 +121,7 @@
 @media only screen and (max-width: 1250px) {
     .about-us-community, .about-us-event, .about-us-location, .about-us-product {
         width: 45%;
-        height: 100%;
+        height: auto;
         padding-bottom: 20px;
     }
 }
